Fix: Solucion al error de persistencia de Ollama
Renombramos OLLAMA_MODELS a OLLAMA_MODEL_LIST para evitar conflicto con la variable interna OLLAMA_MODELS de la imagen oficial de Ollama.

OLLAMA_MODELS es usada por Ollama como directorio de almacenamiento de modelos, no como lista de modelos a descargar.
Al usarla como lista, Ollama interpretaba el valor como path y guardaba los modelos en una ruta incorrecta.

El nuevo nombre elimina el conflicto y asegura que los modelos se guarden correctamente en el volumen montado.

--- a/prod.env.example
+++ b/prod.env.example
@@ -8,7 +8,7 @@ OLLAMA_PORT=11434
 
 # Modelos a descargar al iniciar el container (separados por espacios).
 # NOTA: por ahora solo usar 1 modelo de embeddings.
-OLLAMA_MODELS="nomic-embed-text:latest ministral-3:3B"
+OLLAMA_MODELS_LIST="nomic-embed-text:latest ministral-3:3B"
 
 # Tamaño del embedding (dimensión del vector).
 # Debe coincidir con el modelo de embedding que usaran (nomic-embed-text:latest)
