--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -25,7 +25,7 @@ services:
       context: ./ollama
     container_name: ollama
     environment:
-          OLLAMA_MODELS: ${OLLAMA_MODELS}
+          OLLAMA_MODELS_LIST: ${OLLAMA_MODELS_LIST}
     ports:
       - "${OLLAMA_PORT}:11434"
     volumes:
