--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -24,7 +24,7 @@ services:
     image: jjsotom2k4/ollama-ai:${VERSION}
     container_name: ollama
     environment:
-          OLLAMA_MODELS: ${OLLAMA_MODELS}
+          OLLAMA_MODELS_LIST: ${OLLAMA_MODELS_LIST}
     ports:
       - "${OLLAMA_PORT}:11434"
     volumes:
