--- a/test.env.example
+++ b/test.env.example
@@ -8,7 +8,7 @@ OLLAMA_PORT=11434
 
 # Modelos a descargar al iniciar el container (separados por espacios).
 # NOTA: por ahora solo usar 1 modelo de embeddings.
-OLLAMA_MODELS="nomic-embed-text:latest ministral-3:3B"
+OLLAMA_MODELS_LIST="nomic-embed-text:latest ministral-3:3B"
 
 # Tamaño del embedding (dimensión del vector).
 # Debe coincidir con el modelo de embedding que usaran (nomic-embed-text:latest)
