--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -1,6 +1,7 @@
 FROM ankane/pgvector:latest
 
-#Copiar script de inicio configurado a la carpeta de ejecucion post build
 COPY init-db.sh /docker-entrypoint-initdb.d/init-db.sh
-#darle permisos de ejecucion
-RUN chmod +x /docker-entrypoint-initdb.d/init-db.sh
+
+RUN cd /docker-entrypoint-initdb.d \
+    && sed -i 's/\r$//' init-db.sh \
+    && chmod +x init-db.sh
