feat(fleet): agregar servicio fleetctl y generación automatizada de instaladores
**feat(fleet): agregar servicio fleetctl y generación automatizada de instaladores**

Se introduce un contenedor auxiliar `fleetctl` para generar automáticamente los instaladores de Fleet, integrándolo en las configuraciones `dev`, `prod` y `test` de docker-compose.

### Cambios incluidos:

- Se agrega el directorio `fleetctl/`:
  - `Dockerfile`
  - `start.sh`
  - `setup.sh`
  - `packages.sh`
- Se añade `instaladores/README.md`.
  La carpeta `instaladores/` funciona como directorio destino de los artefactos generados por `fleetctl`. Allí se almacenan los instaladores de Fleet que posteriormente son distribuidos y desplegados mediante Ansible.
- Se actualizan los archivos docker-compose:
  - Se define el volumen compartido `instaladores`.
  - Se agrega el servicio `fleetctl`, que:
    - Espera a que Fleet esté en estado healthy.
    - Ejecuta el proceso de setup.
    - Genera los instaladores.
    - Deposita los artefactos en `./instaladores`.
- Se actualiza el `healthcheck` de Fleet:
  - Uso de HTTPS con `--no-check-certificate`.
  - Aumento en la configuración de reintentos para mayor estabilidad.
- Se establece `NODE_TLS_REJECT_UNAUTHORIZED=0` en el servicio `flowise`, permitiendo la conexión hacia FleetDM cuando se utilizan certificados no verificados.
- Se agregan variables de entorno relacionadas con Fleet en los ejemplos `.env` de `dev`, `prod` y `test`.
- Se actualiza `.dockerignore` para asegurar que el directorio `fleetctl` sea incluido en el build de las imágenes.

--- a/.dockerignore
+++ b/.dockerignore
@@ -13,6 +13,10 @@
 !postgres/
 !postgres/**
 
+# Importante: incluir la carpeta fleetctl y su contenido
+!fleetctl/
+!fleetctl/**
+
 # Importante: incluir la carpeta certs y su contenido (si lo hay)
 !certs/
 !certs/**
