--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -16,6 +16,7 @@ volumes:
   data:
   logs:
   vulndb:
+  instaladores:
 
 services:
 ##################################  AI_Stack  ###############################################################
@@ -67,7 +68,7 @@ services:
       DATABASE_NAME: ${POSTGRES_DB}
       DATABASE_USER: ${POSTGRES_USER}
       DATABASE_PASSWORD: ${POSTGRES_PASSWORD}
-
+      NODE_TLS_REJECT_UNAUTHORIZED: 0
       OLLAMA_BASE_URL: ${OLLAMA_BASE_URL}
     ports:
       - "${FLOWISE_PORT}:${FLOWISE_PORT}"
@@ -198,8 +199,41 @@ services:
       - ./certs/fleet.key:/fleet/fleet.key:ro
     healthcheck:
       test:
-        ["CMD", "wget", "-qO-", "http://127.0.0.1:${FLEET_SERVER_PORT}/healthz"]
-      interval: 10s
-      timeout: 5s
-      retries: 12
+        ["CMD-SHELL", "wget --no-check-certificate -qO- https://127.0.0.1:${FLEET_SERVER_PORT}/healthz || exit 1"]
+      interval: 2s
+      timeout: 3s
+      retries: 60
     restart: unless-stopped
+
+  fleetctl:
+    build:
+      context: ./fleetctl
+    profiles: ["setup"]
+    restart: "no"
+    depends_on:
+      fleet:
+        condition: service_healthy
+    environment:
+      # Setup Dirección interna hacia Fleet (Docker container)
+      FLEET_ADDRESS: https://fleet:${FLEET_SERVER_PORT}
+
+      # Login
+      FLEET_ORG_NAME: ${FLEET_ORG_NAME}
+      FLEET_ADMIN_NAME: ${FLEET_ADMIN_NAME}
+      FLEET_ADMIN_EMAIL: ${FLEET_ADMIN_EMAIL}
+      FLEET_ADMIN_PASSWORD: ${FLEET_ADMIN_PASSWORD}
+
+      # Enrollment (hosts)
+      FLEET_ENROLL_SECRET: ${FLEET_ENROLL_SECRET}
+      FLEET_ENROLL_URL: https://${FLEET_HOST}:${FLEET_SERVER_PORT}
+
+      # Nombre del instalador de salida
+      INSTALLER_NAME: ${INSTALLER_NAME}
+
+      # Flags para generar instaladores
+      GENERATE_MSI: ${GENERATE_MSI}
+      GENERATE_DEB: ${GENERATE_DEB}
+      GENERATE_RPM: ${GENERATE_RPM}
+      GENERATE_PKG: ${GENERATE_PKG}
+    volumes:
+      - ./instaladores:/out
