--- a/prod.env.example
+++ b/prod.env.example
@@ -96,3 +96,38 @@ FLEET_S3_SOFTWARE_INSTALLERS_SECRET_ACCESS_KEY=
 FLEET_S3_SOFTWARE_INSTALLERS_FORCE_S3_PATH_STYLE=
 FLEET_S3_SOFTWARE_INSTALLERS_ENDPOINT_URL=
 FLEET_S3_SOFTWARE_INSTALLERS_REGION=
+
+
+# -----------------------------
+# Fleet Control (fleetctl)
+# -----------------------------
+
+# Login
+# These credentials are used to create the initial admin user and organization in Fleet.
+FLEET_ORG_NAME=Sentinel
+FLEET_ADMIN_NAME=Admin
+FLEET_ADMIN_EMAIL=admin123@gmail.com
+FLEET_ADMIN_PASSWORD=Admin123456$
+
+# Enrollment
+# Secret used to enroll new host machines into Fleet.
+# This value will be registered in Fleet (GitOps/apply) and embedded into the installer.
+##TODO: CAMBIA ESTA LLAVE EN PRODUCCION... ESTA ESDE PRUEBAS, SOLO PARA DESARROLLO
+# Generate a random key with: openssl rand -base64 32
+FLEET_ENROLL_SECRET=pW4xhiuQS4WgLaMu0H0C0rXhYyp7hTMcjgwoqcib2Tg=
+
+# Public hostname or IP reachable from target hosts (NOT the Docker service name "fleet")
+# Examples:
+#  - fleet.local
+#  - 192.168.1.50
+#  - mycompany.com
+FLEET_HOST=fleet.local
+
+# Installer output filename
+INSTALLER_NAME=fleet-osquery
+
+# Flags to control which installer formats to generate (true/false)
+GENERATE_MSI=true
+GENERATE_DEB=true
+GENERATE_RPM=true
+GENERATE_PKG=true
